# github.kb

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
src/: cli.py  settings.py
src/commands/: ask.py  audit.py  common.py  endpoints.py  explain.py
src/github_kb/: __main__.py  cli.py  settings.py
src/github_kb/commands/: ask.py  audit.py  chat.py  common.py  doctor.py  endpoints.py  explain.py
src/github_kb/env/local/: .env.example
src/github_kb/lib/: agent.py  doctor.py  github.py  prompts.py  repository.py  ui.py
src/lib/: __init__.py  agent.py  github.py  models.py  repository.py  ui.py
tests/: conftest.py  test_chat.py  test_github.py  test_repository.py  test_settings.py
